fix: 🐛 alignment issue fixed

--- a/packages/bootstrap4-theme/src/scss/extends/asucms/_rankings-carousel.scss
+++ b/packages/bootstrap4-theme/src/scss/extends/asucms/_rankings-carousel.scss
@@ -29,7 +29,6 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
   }
   .glide * {
